[project]
name = "github-dev-card-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "fastmcp>=3.3.1",
    "google-adk>=1.33.0",
    "google-generativeai>=0.8.6",
    "mcp>=1.27.1",
    "uvicorn>=0.47.0",
]
